--- a/src/static/index.html
+++ b/src/static/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-  <!-- ko component: { name: 'main', params: $data } -->
+  <!-- ko component: { name: 'x-main', params: $data } -->
     <div class="loader-outer">
       <div class="loader-inner">
         <div class="loader-bounce1">
