--- a/src/static/nav/myqueries/myqueriesTemplate.html
+++ b/src/static/nav/myqueries/myqueriesTemplate.html
@@ -1,4 +1,4 @@
-<template id="myqueries-tmpl">
+module.exports = `
   <ul class="myqueries-list" data-bind="foreach: items">
     <li>
       <div class="myquery"
@@ -16,4 +16,4 @@
       </div>
     </li>
   </ul>
-</template>
+`;
