--- a/src/static/nav/tree/treeTemplate.html
+++ b/src/static/nav/tree/treeTemplate.html
@@ -1,4 +1,4 @@
-<template id="tree-tmpl">
+module.exports = `
   <ul class="tree" data-bind="foreach: nodes">
     <li class="treenode"
         data-bind="css: { 'treenode--groupstart': isGroupStart }">
@@ -34,4 +34,4 @@
 
     </li>
   </ul>
-</template>
+`;
