specrunner works in root dir

--- a/src/static/SpecRunner.html
+++ b/src/static/SpecRunner.html
@@ -6,18 +6,12 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/jasmine/2.2.1/jasmine.css" rel="stylesheet" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/2.2.1/jasmine.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/2.2.1/jasmine-html.js"></script>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/2.2.1/boot.js"></script>
 
 
   <script type="text/javascript">
-    window.jasmine = jasmineRequire.core(jasmineRequire);
-    var env = jasmine.getEnv();
-    var jasmineInterface = jasmineRequire.interface(jasmine, env);
-    extend(window, jasmineInterface);
-    function extend(destination, source) {
-      for (var property in source) destination[property] = source[property];
-      return destination;
-    }
+  var runSpecs = window.onload;
+  window.onload = null;
   </script>
 
   <script src="https://rawgit.com/ModuleLoader/es6-module-loader/master/dist/es6-module-loader.src.js"></script>
@@ -26,15 +20,15 @@
   System.config({
     "paths": {
       "knockout": "https://cdnjs.cloudflare.com/ajax/libs/knockout/3.3.0/knockout-debug.js",
-    },
-    "map": {
-
     }
   });
   Promise.all([
-    System.load("spec/myqueriesSpec")
+    System.load("spec/myqueriesSpec"),
+    System.load("spec/navSpec"),
+    System.load("spec/codeformSpec"),
+    System.load("spec/codeformSpec")
   ]).then(function () {
-    System.load('https://cdnjs.cloudflare.com/ajax/libs/jasmine/2.2.1/boot');
+    runSpecs();
   });
   </script>
 
