--- a/src/static/src/index.html
+++ b/src/static/src/index.html
@@ -23,8 +23,7 @@
     </div>
   <!-- /ko -->
 
+  <script>window.pgbbInitialData = [/*INITIAL_DATA_PLACEHOLDER*/][0];</script>
   <script src="bundle-index.js"></script>
-  <script>main(/*INITIAL_DATA_PLACEHOLDER*/);</script>
-
 </body>
 </html>
