--- a/src/static/src/codeform/codeform-template.html
+++ b/src/static/src/codeform/codeform-template.html
@@ -7,7 +7,7 @@ module.exports = `
               class="codeform__textarea"></textarea>
 
     <input name="selection"
-           data-bind="value: ko.toJSON(doc().selectionRange)"
+           data-bind="value: ko.toJSON(readyDoc().selectionRange)"
            type="hidden" />
 
     <div class="codeform__execbar">
