--- a/src/static/src/myqueries/myqueries-template.html
+++ b/src/static/src/myqueries/myqueries-template.html
@@ -11,7 +11,7 @@ module.exports = `
 
         <button class="myquery__remove"
                 data-bind="click: $component.removeItem, visible: isSelected"
-                >remove</button>
+                ><small>remove</small></button>
 
       </div>
     </li>
