--- a/src/static/src/output/map/map-demo.html
+++ b/src/static/src/output/map/map-demo.html
@@ -2,11 +2,12 @@
 <html>
 <head>
   <title></title>
-  <link href="map.css" rel="stylesheet" />
   <link href="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.css" rel="stylesheet" />
+  <link href="map.css" rel="stylesheet" />
   <script src="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet-src.js"></script>
 </head>
 <body>
+  <script>frameElement.setupPgBlackboardOutputFrame();</script>
 
   <div class="main"></div>
   <script src="map.js"></script>
