--- a/src/static/src/codeform/codeform-template.html
+++ b/src/static/src/codeform/codeform-template.html
@@ -2,7 +2,7 @@ module.exports = `
 
   <div class="codeform">
 
-    <textarea name="sql_script"
+    <textarea name="sqlscript"
               data-bind="codeEditor, value: readyDoc()"
               class="codeform__textarea"></textarea>
 
@@ -12,7 +12,7 @@ module.exports = `
 
     <div class="codeform__execbar">
       <button name="view"
-              value="map"
+              value="Map"
               class="codeform__exec-map"
               type="submit"
               title="alt-m"
@@ -20,7 +20,7 @@ module.exports = `
               >map</button>
 
       <button name="view"
-              value="table"
+              value="Table"
               class="codeform__exec-table"
               type="submit"
               title="alt-x"
