--- a/src/ui/err/err1.html
+++ b/src/ui/err/err1.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title></title>
+    <title>pgBlackboard</title>
+	<link rel="stylesheet" href="err.css" />
 </head>
-<link rel="stylesheet" href="err.css" />
 <body>
     <h1>401 Unauthorized</h1>
     <p>
