queryplan wthout full d3

--- a/src/ui/output/queryplan/queryplan-demo.html
+++ b/src/ui/output/queryplan/queryplan-demo.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <title></title>
   <link rel="stylesheet" type="text/css" href="queryplan.css" />
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.js"></script>
+  <script src="d3.js"></script>
   <script src="queryplan.js"></script>
 </head>
 <body>
@@ -12,9 +12,6 @@
 <!-- <script>frameElement.setupPgBlackboardOutputFrame();</script> -->
 <div class="main scrollbox">
 
-  <p class="message error">
-    Postgres server gone
-  </p>
 
   <script>pgBlackboardOutput.queryPlan({
    "heat":0.000192,
