add demo server

--- a/src/ui/main/main-template.html
+++ b/src/ui/main/main-template.html
@@ -28,6 +28,7 @@ module.exports = `
         <form class="main__codeform"
               target="output-iframe"
               method="POST"
+              action="exec"
               data-bind="component: {
                 name: 'x-codeform',
                 params: { doc: selectedDoc }
