--- a/src/ui/output/map/map-demo.html
+++ b/src/ui/output/map/map-demo.html
@@ -7,7 +7,7 @@
   <script src="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet-src.js"></script>
 </head>
 <body>
-  <script>frameElement.setupPgBlackboardOutputFrame();</script>
+  <script>frameElement.setupPgBlackboardOutputFrame('map');</script>
 
   <div class="main"></div>
   <script src="map.js"></script>
