--- a/src/ui/output/table/table-demo.html
+++ b/src/ui/output/table/table-demo.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<script>frameElement.setupPgBlackboardOutputFrame();</script>
+<script>frameElement.setupPgBlackboardOutputFrame('table');</script>
 <div class="main scrollbox">
 
   <p class="message error">
@@ -31,7 +31,7 @@
   </table>
 
   <script>
-  pgBlackboard.setError({
+  pgBlackboardOutput.setError({
     message: 'error ' + (+new Date),
     line: 0
   });
@@ -85,6 +85,238 @@
       <tr><th></th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
     </tbody>
   </table>
+
+  <script>pgBlackboardOutput.queryPlan({
+   "heat":0.000192,
+   "typ":"Limit",
+   "properties":{
+      "Actual Loops":1,
+      "Actual Rows":26,
+      "Actual Startup Time":10.86,
+      "Actual Total Time":11.274,
+      "Node Type":"Limit",
+      "Plan Rows":27,
+      "Plan Width":200,
+      "Startup Cost":25.39,
+      "Total Cost":42.46
+   },
+   "children":[
+      {
+         "heat":1.0,
+         "typ":"Hash Join",
+         "properties":{
+            "Actual Loops":1,
+            "Actual Rows":26,
+            "Actual Startup Time":10.858,
+            "Actual Total Time":11.269,
+            "Hash Cond":"(c.relnamespace = n.oid)",
+            "Join Type":"Inner",
+            "Node Type":"Hash Join",
+            "Parent Relationship":"Outer",
+            "Plan Rows":27,
+            "Plan Width":200,
+            "Startup Cost":25.39,
+            "Total Cost":42.46
+         },
+         "children":[
+            {
+               "heat":0.010823,
+               "typ":"Hash Join",
+               "properties":{
+                  "Actual Loops":1,
+                  "Actual Rows":150,
+                  "Actual Startup Time":0.417,
+                  "Actual Total Time":0.78,
+                  "Hash Cond":"(i.oid = x.indexrelid)",
+                  "Join Type":"Inner",
+                  "Node Type":"Hash Join",
+                  "Parent Relationship":"Outer",
+                  "Plan Rows":41,
+                  "Plan Width":140,
+                  "Startup Cost":24.18,
+                  "Total Cost":40.56
+               },
+               "children":[
+                  {
+                     "heat":0.024902,
+                     "typ":"Seq Scan",
+                     "properties":{
+                        "Actual Loops":1,
+                        "Actual Rows":363,
+                        "Actual Startup Time":0.003,
+                        "Actual Total Time":0.263,
+                        "Alias":"i",
+                        "Node Type":"Seq Scan",
+                        "Parent Relationship":"Outer",
+                        "Plan Rows":361,
+                        "Plan Width":68,
+                        "Relation Name":"pg_class",
+                        "Startup Cost":0.0,
+                        "Total Cost":14.61
+                     },
+                     "children":[
+
+                     ]
+                  },
+                  {
+                     "heat":0.005842,
+                     "typ":"Hash",
+                     "properties":{
+                        "Actual Loops":1,
+                        "Actual Rows":150,
+                        "Actual Startup Time":0.401,
+                        "Actual Total Time":0.401,
+                        "Hash Batches":1,
+                        "Hash Buckets":1024,
+                        "Node Type":"Hash",
+                        "Original Hash Batches":1,
+                        "Parent Relationship":"Inner",
+                        "Peak Memory Usage":16,
+                        "Plan Rows":41,
+                        "Plan Width":76,
+                        "Startup Cost":23.67,
+                        "Total Cost":23.67
+                     },
+                     "children":[
+                        {
+                           "heat":0.008524,
+                           "typ":"Hash Join",
+                           "properties":{
+                              "Actual Loops":1,
+                              "Actual Rows":150,
+                              "Actual Startup Time":0.231,
+                              "Actual Total Time":0.337,
+                              "Hash Cond":"(x.indrelid = c.oid)",
+                              "Join Type":"Inner",
+                              "Node Type":"Hash Join",
+                              "Parent Relationship":"Outer",
+                              "Plan Rows":41,
+                              "Plan Width":76,
+                              "Startup Cost":17.21,
+                              "Total Cost":23.67
+                           },
+                           "children":[
+                              {
+                                 "heat":0.002203,
+                                 "typ":"Seq Scan",
+                                 "properties":{
+                                    "Actual Loops":1,
+                                    "Actual Rows":150,
+                                    "Actual Startup Time":0.002,
+                                    "Actual Total Time":0.026,
+                                    "Alias":"x",
+                                    "Node Type":"Seq Scan",
+                                    "Parent Relationship":"Outer",
+                                    "Plan Rows":149,
+                                    "Plan Width":8,
+                                    "Relation Name":"pg_index",
+                                    "Startup Cost":0.0,
+                                    "Total Cost":5.49
+                                 },
+                                 "children":[
+
+                                 ]
+                              },
+                              {
+                                 "heat":0.003927,
+                                 "typ":"Hash",
+                                 "properties":{
+                                    "Actual Loops":1,
+                                    "Actual Rows":101,
+                                    "Actual Startup Time":0.219,
+                                    "Actual Total Time":0.219,
+                                    "Hash Batches":1,
+                                    "Hash Buckets":1024,
+                                    "Node Type":"Hash",
+                                    "Original Hash Batches":1,
+                                    "Parent Relationship":"Inner",
+                                    "Peak Memory Usage":11,
+                                    "Plan Rows":100,
+                                    "Plan Width":72,
+                                    "Startup Cost":15.96,
+                                    "Total Cost":15.96
+                                 },
+                                 "children":[
+                                    {
+                                       "heat":0.016474,
+                                       "typ":"Seq Scan",
+                                       "properties":{
+                                          "Actual Loops":1,
+                                          "Actual Rows":101,
+                                          "Actual Startup Time":0.004,
+                                          "Actual Total Time":0.175,
+                                          "Alias":"c",
+                                          "Filter":"(relkind = ANY ('{r,t,m}'::\"char\"[]))",
+                                          "Node Type":"Seq Scan",
+                                          "Parent Relationship":"Outer",
+                                          "Plan Rows":100,
+                                          "Plan Width":72,
+                                          "Relation Name":"pg_class",
+                                          "Rows Removed by Filter":262,
+                                          "Startup Cost":0.0,
+                                          "Total Cost":15.96
+                                       },
+                                       "children":[
+
+                                       ]
+                                    }
+                                 ]
+                              }
+                           ]
+                        }
+                     ]
+                  }
+               ]
+            },
+            {
+               "heat":0.0,
+               "typ":"Hash",
+               "properties":{
+                  "Actual Loops":1,
+                  "Actual Rows":6,
+                  "Actual Startup Time":0.045,
+                  "Actual Total Time":0.045,
+                  "Hash Batches":1,
+                  "Hash Buckets":1024,
+                  "Node Type":"Hash",
+                  "Original Hash Batches":1,
+                  "Parent Relationship":"Inner",
+                  "Peak Memory Usage":1,
+                  "Plan Rows":6,
+                  "Plan Width":68,
+                  "Startup Cost":1.14,
+                  "Total Cost":1.14
+               },
+               "children":[
+                  {
+                     "heat":0.003735,
+                     "typ":"Seq Scan",
+                     "properties":{
+                        "Actual Loops":1,
+                        "Actual Rows":6,
+                        "Actual Startup Time":0.029,
+                        "Actual Total Time":0.042,
+                        "Alias":"n",
+                        "Filter":"((nspname <> ALL ('{pg_catalog,information_schema}'::name[])) AND (nspname !~ '^pg_toast'::text))",
+                        "Node Type":"Seq Scan",
+                        "Parent Relationship":"Outer",
+                        "Plan Rows":6,
+                        "Plan Width":68,
+                        "Relation Name":"pg_namespace",
+                        "Rows Removed by Filter":4,
+                        "Startup Cost":0.0,
+                        "Total Cost":1.14
+                     },
+                     "children":[
+
+                     ]
+                  }
+               ]
+            }
+         ]
+      }
+   ]
+})</script>
 
 </div>
 </body>
