fix queryplan template

--- a/ui/src/output/queryplan/queryplan-template.html
+++ b/ui/src/output/queryplan/queryplan-template.html
@@ -1,3 +1,4 @@
+module.exports = `
 <svg class="queryplan"
      data-bind="attr: { viewBox: viewBox.join(' ') }">
 
@@ -24,3 +25,4 @@
     </g>
   </g>
 </svg>
+`;
