--- a/ui/src/output/queryplan/queryplan-overlay-template.html
+++ b/ui/src/output/queryplan/queryplan-overlay-template.html
@@ -2,7 +2,8 @@ module.exports = `
 <div class="queryplan-overlay"
      data-bind="css: { 'queryplan-overlay--visible': content }">
 
-  <div data-bind="html: content"></div>
+  <div class="queryplan-overlay__content"
+  	   data-bind="html: content"></div>
   <button class="queryplan-overlay__close"
           data-bind="click: close">&times;</button>
 </div>
