--- a/ui/src/output/queryplan/queryplan-preview-template.html
+++ b/ui/src/output/queryplan/queryplan-preview-template.html
@@ -1,6 +1,6 @@
 module.exports = `
 <div class="queryplan-preview"
-	 data-bind="html: content,
-	 		    click: showFull"></div>
+	 data-bind.template="content"
+     data-bind.click="showFull"></div>
 `;
 
