--- a/ui/spec/_runner.html
+++ b/ui/spec/_runner.html
@@ -7,11 +7,11 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/2.3.4/jasmine.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/2.3.4/jasmine-html.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/2.3.4/boot.js"></script>
-  <link rel="import" href="imd.html" />
-  <link rel="import" href="spec/myqueries-spec.html" />
-  <link rel="import" href="spec/tree-spec.html" />
-  <link rel="import" href="spec/nav-spec.html" />
-  <link rel="import" href="spec/codeform-spec.html" />
+  <link rel="import" href="../imd.html" />
+  <link rel="import" href="myqueries-spec.html" />
+  <link rel="import" href="tree-spec.html" />
+  <link rel="import" href="nav-spec.html" />
+  <link rel="import" href="codeform-spec.html" />
 </head>
 <body>
 
