--- a/ui/error.html
+++ b/ui/error.html
@@ -34,9 +34,9 @@
 </head>
 <body>
   <h1>
-    <span><!--CODE-PLACEHOLDER--></span>
-    <span><!--PHRASE-PLACEHOLDER--></span>
+    <span data-placeholder="code"></span>
+    <span data-placeholder="phrase"></span>
   </h1>
-  <p><!--MESSAGE-PLACEHOLDER--></p>
+  <p data-placeholder="message"></p>
 </body>
 </html>
