--- a/ui/index.html
+++ b/ui/index.html
@@ -3,11 +3,112 @@
 <head>
   <meta charset="utf-8" />
   <title>pgBlackboard</title>
+  <style>
+    /* http://tobiasahlin.com/spinkit/ */
+
+    .loading-indicator {
+      position: fixed;
+      top: 0;
+      bottom: 0;
+      right: 0;
+      left: 0;
+    }
+
+    /*.light*/.loading-indicator {
+      background-color: #fcfcfc;
+    }
+
+    .dark.loading-indicator {
+      background-color: #333;
+    }
+
+    .loading-indicator__inner {
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      width: 4em;
+      height: 18px;
+      text-align: center;
+      margin: -.5em -2em;
+      font-size: 25px;
+    }
+
+    .loading-indicator__bounce1,
+    .loading-indicator__bounce2,
+    .loading-indicator__bounce3 {
+      width: 1em;
+      height: 1em;
+      margin: .1em;
+
+      border-radius: 100%;
+      display: inline-block;
+      -webkit-animation: bouncedelay 1.4s infinite ease-in-out;
+      animation: bouncedelay 1.4s infinite ease-in-out;
+      /* Prevent first frame from flickering when animation starts */
+      -webkit-animation-fill-mode: both;
+      animation-fill-mode: both;
+    }
+
+    /*.light*/ .loading-indicator__bounce1,
+    /*.light*/ .loading-indicator__bounce2,
+    /*.light*/ .loading-indicator__bounce3 {
+      background-color: #888;
+    }
+
+    .dark .loading-indicator__bounce1,
+    .dark .loading-indicator__bounce2,
+    .dark .loading-indicator__bounce3 {
+      background-color: #ccc;
+    }
+
+    .loading-indicator__bounce1 {
+      -webkit-animation-delay: -0.32s;
+      animation-delay: -0.32s;
+    }
+
+    .loading-indicator__bounce2 {
+      -webkit-animation-delay: -0.16s;
+      animation-delay: -0.16s;
+    }
+
+    @-webkit-keyframes bouncedelay {
+      0%, 80%, 100% { -webkit-transform: scale(0.0); }
+      40% { -webkit-transform: scale(1.0); }
+    }
+
+    @keyframes bouncedelay {
+      0%, 80%, 100% {
+        transform: scale(0.0);
+        -webkit-transform: scale(0.0);
+      }
+      40% {
+          transform: scale(1.0);
+          -webkit-transform: scale(1.0);
+      }
+    }
+  </style>
 </head>
 <body>
-  <pgbb-app params='initialData: [/*INITIAL-DATA-PLACEHOLDER*/][0]'>
-    <!--LOADING-INDICATOR-PLACEHOLDER-->
+  <pgbb-app>
+    <div class="loading-indicator" id="loading-indicator">
+      <div class="loading-indicator__inner">
+        <div class="loading-indicator__bounce1">
+        </div><div class="loading-indicator__bounce2">
+        </div><div class="loading-indicator__bounce3"></div>
+      </div>
+    </div>
+    <script>
+    if (localStorage.getItem('pgblackboard_isdark') == 'true') {
+      document.getElementById('loading-indicator').className += ' dark';
+    }
+    </script>
   </pgbb-app>
+
+  <script id="pgbb-initial-data"
+          type="text/json"
+          data-placeholder="initial_data">
+  </script>
+
   <script src="pgblackboard.js"></script>
 </body>
 </html>
