compiles with rust 1.6 beta

--- a/ui/_flux/index.html
+++ b/ui/_flux/index.html
@@ -122,6 +122,6 @@
 
 
   <script src="app.js" charset="utf-8"></script>
-  <script src="/tree?callback=acceptRootTreeNodes" charset="utf-8"></script>
+  <script src="/treeinit?callback=acceptRootTreeNodes" charset="utf-8"></script>
 </body>
 </html>
