--- a/ui/_flux/index.html
+++ b/ui/_flux/index.html
@@ -7,7 +7,7 @@
   <style>
     /* http://tobiasahlin.com/spinkit/ */
 
-    .loading-indicator {
+    .loadingIndicator {
       position: fixed;
       top: 0;
       bottom: 0;
@@ -15,15 +15,15 @@
       left: 0;
     }
 
-    /*.light*/.loading-indicator {
+    /*.light*/.loadingIndicator {
       background-color: #fcfcfc;
     }
 
-    .dark.loading-indicator {
+    .dark.loadingIndicator {
       background-color: #333;
     }
 
-    .loading-indicator__inner {
+    .loadingIndicator__inner {
       position: fixed;
       top: 50%;
       left: 50%;
@@ -34,9 +34,9 @@
       font-size: 25px;
     }
 
-    .loading-indicator__bounce1,
-    .loading-indicator__bounce2,
-    .loading-indicator__bounce3 {
+    .loadingIndicator__bounce1,
+    .loadingIndicator__bounce2,
+    .loadingIndicator__bounce3 {
       width: 1em;
       height: 1em;
       margin: .1em;
@@ -50,24 +50,24 @@
       animation-fill-mode: both;
     }
 
-    /*.light*/ .loading-indicator__bounce1,
-    /*.light*/ .loading-indicator__bounce2,
-    /*.light*/ .loading-indicator__bounce3 {
+    /*.light*/ .loadingIndicator__bounce1,
+    /*.light*/ .loadingIndicator__bounce2,
+    /*.light*/ .loadingIndicator__bounce3 {
       background-color: #888;
     }
 
-    .dark .loading-indicator__bounce1,
-    .dark .loading-indicator__bounce2,
-    .dark .loading-indicator__bounce3 {
+    .dark .loadingIndicator__bounce1,
+    .dark .loadingIndicator__bounce2,
+    .dark .loadingIndicator__bounce3 {
       background-color: #ccc;
     }
 
-    .loading-indicator__bounce1 {
+    .loadingIndicator__bounce1 {
       -webkit-animation-delay: -0.32s;
       animation-delay: -0.32s;
     }
 
-    .loading-indicator__bounce2 {
+    .loadingIndicator__bounce2 {
       -webkit-animation-delay: -0.16s;
       animation-delay: -0.16s;
     }
@@ -90,7 +90,10 @@
   </style>
 
   <link rel="stylesheet" href="fontello/css/fontello.css" />
-  <link rel="stylesheet" href="../../node_modules/codemirror/lib/codemirror.css" />
+  <link rel="stylesheet" href="../node_modules/codemirror/lib/codemirror.css" />
+  <link rel="stylesheet" href="../node_modules/leaflet/dist/leaflet.css" />
+
+
   <script src="amd.js" charset="utf-8"></script>
   <script src="csslink.js" charset="utf-8"></script>
 
@@ -98,19 +101,20 @@
 <body>
 
   <div id="pgblackboardApp">
-    <div class="loading-indicator" id="loading-indicator">
-      <div class="loading-indicator__inner">
-        <div class="loading-indicator__bounce1">
-        </div><div class="loading-indicator__bounce2">
-        </div><div class="loading-indicator__bounce3"></div>
+    <div class="loadingIndicator" id="loadingIndicator">
+      <div class="loadingIndicator__inner">
+        <div class="loadingIndicator__bounce1">
+        </div><div class="loadingIndicator__bounce2">
+        </div><div class="loadingIndicator__bounce3"></div>
       </div>
     </div>
     <script>
     if (localStorage.getItem('pgblackboard_isdark') == 'true') {
-      document.getElementById('loading-indicator').className += ' dark';
+      document.getElementById('loadingIndicator').className += ' dark';
     }
     </script>
   </div>
+
 
   <script src="../node_modules/codemirror/lib/codemirror.js"></script>
   <script src="../node_modules/codemirror/addon/search/searchcursor.js"></script>
@@ -119,9 +123,9 @@
   <script src="../node_modules/codemirror/addon/edit/closebrackets.js"></script>
   <script src="../node_modules/codemirror/mode/sql/sql.js"></script>
 
-
+  <script src="../node_modules/leaflet/dist/leaflet-src.js"></script>
 
   <script src="app.js" charset="utf-8"></script>
-  <script src="/treeinit?callback=acceptRootTreeNodes" charset="utf-8"></script>
+  <script src="/treeinit?callback=acceptRootTreeNodes"></script>
 </body>
 </html>
