--- a/ui/_flux/index.html
+++ b/ui/_flux/index.html
@@ -90,8 +90,17 @@
   </style>
 
   <link rel="stylesheet" href="fontello/css/fontello.css" />
+  
   <link rel="stylesheet" href="../node_modules/codemirror/lib/codemirror.css" />
-  <link rel="stylesheet" href="../node_modules/leaflet/dist/leaflet.css" />
+  <script src="../node_modules/codemirror/lib/codemirror.js"></script>
+  <script src="../node_modules/codemirror/addon/search/searchcursor.js"></script>
+  <script src="../node_modules/codemirror/keymap/sublime.js"></script>
+  <script src="../node_modules/codemirror/addon/edit/matchbrackets.js"></script>
+  <script src="../node_modules/codemirror/addon/edit/closebrackets.js"></script>
+  <script src="../node_modules/codemirror/mode/sql/sql.js"></script>
+
+
+  <!-- <link rel="stylesheet" href="../node_modules/leaflet/dist/leaflet.css" /> -->
 
 
   <script src="amd.js" charset="utf-8"></script>
@@ -116,14 +125,8 @@
   </div>
 
 
-  <script src="../node_modules/codemirror/lib/codemirror.js"></script>
-  <script src="../node_modules/codemirror/addon/search/searchcursor.js"></script>
-  <script src="../node_modules/codemirror/keymap/sublime.js"></script>
-  <script src="../node_modules/codemirror/addon/edit/matchbrackets.js"></script>
-  <script src="../node_modules/codemirror/addon/edit/closebrackets.js"></script>
-  <script src="../node_modules/codemirror/mode/sql/sql.js"></script>
 
-  <script src="../node_modules/leaflet/dist/leaflet-src.js"></script>
+  <!-- <script src="../node_modules/leaflet/dist/leaflet-src.js"></script> -->
 
   <script src="app.js" charset="utf-8"></script>
   <script src="/treeinit?callback=acceptRootTreeNodes"></script>
