--- a/ui/_flux/index.html
+++ b/ui/_flux/index.html
@@ -90,7 +90,7 @@
   </style>
 
   <link rel="stylesheet" href="fontello/css/fontello.css" />
-  
+
   <link rel="stylesheet" href="../node_modules/codemirror/lib/codemirror.css" />
   <script src="../node_modules/codemirror/lib/codemirror.js"></script>
   <script src="../node_modules/codemirror/addon/search/searchcursor.js"></script>
@@ -129,6 +129,6 @@
   <!-- <script src="../node_modules/leaflet/dist/leaflet-src.js"></script> -->
 
   <script src="app.js" charset="utf-8"></script>
-  <script src="/treeinit?callback=acceptRootTreeNodes"></script>
+  <!-- <script src="/treeinit?callback=acceptRootTreeNodes"></script> -->
 </body>
 </html>
