--- a/ui/test.html
+++ b/ui/test.html
@@ -14,6 +14,7 @@
         require('./drafts/drafts_repo.spec');
         require('./sql/linecol.spec');
         require('./sql/next_statement.spec');
+        require('./reducers/stmt_results.spec');
         mocha.run()
       }) 
     </script>
