--- a/ui/_trash/404.html
+++ b/ui/_trash/404.html
@@ -34,9 +34,9 @@
 </head>
 <body>
   <h1>
-    <span data-placeholder="code"></span>
-    <span data-placeholder="phrase"></span>
+    <span>404</span>
+    <span>Not Found</span>
   </h1>
-  <p data-placeholder="message"></p>
+  <p>Requested URL not exists</p>
 </body>
 </html>
