--- a/ui/index.html
+++ b/ui/index.html
@@ -7,7 +7,7 @@
   <style>
     /* http://tobiasahlin.com/spinkit/ */
 
-    .loadingIndicator {
+    .loading_indicator {
       position: fixed;
       top: 0;
       bottom: 0;
@@ -15,15 +15,15 @@
       left: 0;
     }
 
-    /*.light*/.loadingIndicator {
+    /*.light*/.loading_indicator {
       background-color: #fcfcfc;
     }
 
-    .dark.loadingIndicator {
+    .dark.loading_indicator {
       background-color: #333;
     }
 
-    .loadingIndicator__inner {
+    .loading_indicator-inner {
       position: fixed;
       top: 50%;
       left: 50%;
@@ -34,9 +34,9 @@
       font-size: 25px;
     }
 
-    .loadingIndicator__bounce1,
-    .loadingIndicator__bounce2,
-    .loadingIndicator__bounce3 {
+    .loading_indicator-bounce1,
+    .loading_indicator-bounce2,
+    .loading_indicator-bounce3 {
       width: 1em;
       height: 1em;
       margin: .1em;
@@ -50,24 +50,24 @@
       animation-fill-mode: both;
     }
 
-    /*.light*/ .loadingIndicator__bounce1,
-    /*.light*/ .loadingIndicator__bounce2,
-    /*.light*/ .loadingIndicator__bounce3 {
+    /*.light*/ .loading_indicator-bounce1,
+    /*.light*/ .loading_indicator-bounce2,
+    /*.light*/ .loading_indicator-bounce3 {
       background-color: #888;
     }
 
-    .dark .loadingIndicator__bounce1,
-    .dark .loadingIndicator__bounce2,
-    .dark .loadingIndicator__bounce3 {
+    .dark .loading_indicator-bounce1,
+    .dark .loading_indicator-bounce2,
+    .dark .loading_indicator-bounce3 {
       background-color: #ccc;
     }
 
-    .loadingIndicator__bounce1 {
+    .loading_indicator-bounce1 {
       -webkit-animation-delay: -0.32s;
       animation-delay: -0.32s;
     }
 
-    .loadingIndicator__bounce2 {
+    .loading_indicator-bounce2 {
       -webkit-animation-delay: -0.16s;
       animation-delay: -0.16s;
     }
@@ -88,45 +88,25 @@
       }
     }
   </style>
-
-
-  <link rel="stylesheet" href="../node_modules/codemirror/lib/codemirror.css" />
-
-
-  <!-- <link rel="stylesheet" href="../node_modules/leaflet/dist/leaflet.css" /> -->
-
-  <link rel="stylesheet" href="style/app.css" />
-
-
 </head>
 <body>
 
   <div id="pgblackboardApp">
-    <div class="loadingIndicator" id="loadingIndicator">
-      <div class="loadingIndicator__inner">
-        <div class="loadingIndicator__bounce1">
-        </div><div class="loadingIndicator__bounce2">
-        </div><div class="loadingIndicator__bounce3"></div>
+    <div class="loading_indicator" id="loading_indicator">
+      <div class="loading_indicator-inner">
+        <div class="loading_indicator-bounce1">
+        </div><div class="loading_indicator-bounce2">
+        </div><div class="loading_indicator-bounce3"></div>
       </div>
     </div>
     <script>
     if (localStorage.getItem('pgblackboard_isdark') == 'true') {
-      document.getElementById('loadingIndicator').className += ' dark';
+      document.getElementById('loading_indicator').className += ' dark';
     }
     </script>
   </div>
 
-
-
-  <!-- <script src="../node_modules/leaflet/dist/leaflet-src.js"></script> -->
-
-  <script src="../node_modules/codemirror/lib/codemirror.js"></script>
-  <script src="../node_modules/codemirror/addon/search/searchcursor.js"></script>
-  <script src="../node_modules/codemirror/keymap/sublime.js"></script>
-  <script src="../node_modules/codemirror/addon/edit/matchbrackets.js"></script>
-  <script src="../node_modules/codemirror/addon/edit/closebrackets.js"></script>
-  <script src="../node_modules/codemirror/mode/sql/sql.js"></script>
-  <script src="amd.js" charset="utf-8"></script>
-  <script src="app.js" charset="utf-8"></script>
+  <link href="./style/app.css" rel="stylesheet" />
+  <script src="./pgblackboard.js"></script>
 </body>
 </html>
